fix(frontend): isolate list scopes and keep logout credentials out of URLs (#27)