@@ -4,6 +4,8 @@
 
 本轮关联 [前端重构 Issue #27](https://github.com/Jupiter363/shortlink/issues/27)。联调中发现的两项后端问题独立修复并合并：[冷跳转预算 PR #30](https://github.com/Jupiter363/shortlink/pull/30)、[日期与数据库时区 PR #31](https://github.com/Jupiter363/shortlink/pull/31)。
 
+最终审查的退出会话合同由 [PR #34](https://github.com/Jupiter363/shortlink/pull/34) 独立修复；新前端、列表范围修复与全部设计/联调档案归入 [PR #32](https://github.com/Jupiter363/shortlink/pull/32)。
+
 ## 验收结果
 
 | 范围 | 实际验证 | 证据 |
@@ -16,6 +18,7 @@
 | 双 Agent | 投放分析和安全风控真实 chat 均返回 HTTP 200，并显示完成结果；会话独立、请求中锁定导航、页面切换后回看 | [Agent 链路记录](analysis-uat.json) |
 | 风险中心 | 真实概览、档案、事件、详情、当前策略查询；脱敏证据、UNKNOWN 恢复态、抽屉焦点与窄屏 | [风险 UAT](risk-uat.md) |
 | 最终构建 | 30 项烟测通过；登录/注册及 7 个受保护路由支持直接进入、硬刷新恢复；移动端分组切换与风险刷新使用真实 GET 200；无未捕获浏览器异常 | [最终烟测](final-smoke.json) |
+| 审查后增量回归 | 15 项通过；实际退出 URL 不含 token，HTTP 200 后旧 token 被拒绝，重新登录可用；切组失败清旧元数据，撤销故障注入后实际刷新恢复 | [退出与分组复验](logout-scope-uat.md) |
 
 前端业务入口不使用原型内存账户、模拟任务推进、样例统计或假导出。缺失指标保持未知；统计快照按实际授权范围复用，创建时间分页不会携带另一页范围的快照。
 
@@ -23,11 +26,12 @@
 
 | 检查 | 结果 |
 | --- | --- |
-| 前端 `npm.cmd run test` | 64 项通过 |
+| 前端 `npm.cmd run test` | 69 项通过，含最终审查新增的退出请求与列表范围回归 |
 | 前端 `npm.cmd run lint` | 通过 |
 | 前端 `npm.cmd run build` | 通过，Vue SFC 与懒加载路由实际编译 |
 | Redirect 预算、配置绑定、Bloom 与过期权威凭据回归 | 32 项通过 |
 | Command 日期合同、UTC JDBC 配置与实际本地 MySQL 连接池验收 | 25 项通过，其中 1 项为真实数据库只读集成检查，未跳过 |
+| Admin 退出会话与管理鉴权合同 | 50 项通过：过滤器 35 项、MVC 15 项 |
 | Nginx | `nginx -t` 通过，已部署相同配置 |
 
 前端检查在 `frontend/console-vue` 执行。后端定向检查在仓库根目录执行：
@@ -35,6 +39,7 @@
 ```powershell
 mvn.cmd -pl services/shortlink-redirect -am "-DskipTests=false" "-Dtest=RedirectPropertiesBindingTest,RedirectControllerTest,BloomRedirectControllerTest,ProofBudgetRedirectTest" "-Dsurefire.failIfNoSpecifiedTests=false" "-Dnet.bytebuddy.experimental=true" test
 mvn.cmd -pl services/shortlink-command -am "-DskipTests=false" "-Dtest=LinkCommandControllerWireContractTest,UtcJdbcConfigurationTest,UtcJdbcSessionIT" "-Dsurefire.failIfNoSpecifiedTests=false" "-Dnet.bytebuddy.experimental=true" test
+mvn.cmd -pl services/admin -am "-DskipTests=false" "-Dtest=ManagementIdentityTest,UserLogoutMvcTest" "-Dsurefire.failIfNoSpecifiedTests=false" "-Dnet.bytebuddy.experimental=true" test
 ```
 
 本机 JDK 21 的 Mockito/Byte Buddy 组合需要上述兼容开关。`UtcJdbcSessionIT` 显式读取 `SHORTLINK_UAT_DB_URL`、`SHORTLINK_UAT_DB_USERNAME`、`SHORTLINK_UAT_DB_PASSWORD`，缺少环境时会跳过；本次已向本地 MySQL 执行，确认连接会话为 `+00:00`、`NOW()` 与 `UTC_TIMESTAMP()` 差为 0。凭据只从忽略的本地运行配置载入，未纳入报告或 Git。
@@ -46,6 +51,7 @@ mvn.cmd -pl services/shortlink-command -am "-DskipTests=false" "-Dtest=LinkComma
 3. UTC 数据库时间被格式化为无时区字符串，再由管理端按北京时间解释，导致显示相差 8 小时。Command 明确按 UTC 解释存储时间、按 Asia/Shanghai 输出，并强制实际 JDBC 会话为 UTC；拒绝冲突的非 UTC 配置。前端不做补偿加时。
 4. 二维码函数生成 PNG，原型下载名仍是 SVG。按真实 MIME 选择后缀，已检验文件签名；本地无协议地址仅在 host 完全匹配时应用 HTTP origin 配置。
 5. 统一真实会话恢复、64 位 ID、业务错误码、取消/超时、未知写入结果核实；Nginx 配置 8 MiB 请求边界和 Agent 等待预算，访问日志不记录含旧 logout token 的 query。
+6. 最终审查补充修复：新范围加载失败时清除上一分组的数量与统计覆盖状态，未知显示「—」；同范围翻页失败仍保留已确认页码和快照。退出改为仅使用已验证会话头，避免 token 进入 URL；旧 query 参数只在完整匹配时兼容。相关鉴权合同单独跟踪 [Issue #33](https://github.com/Jupiter363/shortlink/issues/33)。
 
 ## 验证边界与后续项
 
